syntax = "proto3";
option csharp_namespace = "InventoryService.Grpc";

package inventory;

service InventoryService {
  rpc GetStock (GetStockRequest) returns (GetStockResponse);
}

message GetStockRequest {
  string productId = 1;
}

message GetStockResponse {
  string productId = 1;
  int64 availableQty = 2;
}